--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ h1, h2, h3, h4, p {
 
 #bff-img {
     width: 150px;
+    height: 150px;
     border-radius: 50%;
     border: 6px solid #EFB0C9;
     margin-bottom: 10px;
